--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">AxezzibleRestaurants</string>
     <string name="addNewResButton">Add new</string>
     <string name="showMapButton">Show map</string>
+    <string name="returnToList">Return to list</string>
 </resources>
