--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="accessible">Accessible</string>
     <string name="save">Save</string>
     <string name="title_activity_map">MapActivity</string>
+    <string name="addImage">Add image</string>
 </resources>
