Added some more info on recyclerView

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="save">Save</string>
     <string name="title_activity_map">MapActivity</string>
     <string name="addImage">Add image</string>
+    <string name="detailsButton">More info</string>
 </resources>
