--- a/app/src/main/res/values-sv-rSE/strings.xml
+++ b/app/src/main/res/values-sv-rSE/strings.xml
@@ -15,4 +15,5 @@
     <string name="save">Spara</string>
     <string name="addImage">Lägg till foto</string>
     <string name="title_activity_map">Karta</string>
+    <string name="detailsButton">Mera info</string>
 </resources>
