--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="signIn">Sign in</string>
     <string name="signUp">Sign up</string>
     <string name="password">Password</string>
+    <string name="email">Email</string>
 </resources>
