finished detail layout

--- a/app/src/main/res/values-sv-rSE/strings.xml
+++ b/app/src/main/res/values-sv-rSE/strings.xml
@@ -20,4 +20,5 @@
     <string name="signUp">Registrera dig</string>
     <string name="password">Lösenord</string>
     <string name="email">Epost</string>
+    <string name="showOnMap">Visa på kartan</string>
 </resources>
