--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="signUp">Sign up</string>
     <string name="password">Password</string>
     <string name="email">Email</string>
+    <string name="showOnMap">Show on map</string>
 </resources>
