--- a/app/src/main/res/values-sv-rSE/strings.xml
+++ b/app/src/main/res/values-sv-rSE/strings.xml
@@ -21,4 +21,5 @@
     <string name="password">Lösenord</string>
     <string name="email">Epost</string>
     <string name="showOnMap">Visa på kartan</string>
+    <string name="moreReviews">Visa flera recensioner</string>
 </resources>
