--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="password">Password</string>
     <string name="email">Email</string>
     <string name="showOnMap">Show on map</string>
+    <string name="moreReviews">Show more reviews</string>
 </resources>
