much nicer looking start view

--- a/app/src/main/res/values-sv-rSE/strings.xml
+++ b/app/src/main/res/values-sv-rSE/strings.xml
@@ -25,4 +25,5 @@
     <string name="phone">Telefonnummer</string>
     <string name="eMail">Epost address</string>
     <string name="WebUrl">Hemsida</string>
+    <string name="description">Beskrivning</string>
 </resources>
