Added review page

--- a/app/src/main/res/values-sv-rSE/strings.xml
+++ b/app/src/main/res/values-sv-rSE/strings.xml
@@ -26,4 +26,6 @@
     <string name="eMail">Epost address</string>
     <string name="WebUrl">Hemsida</string>
     <string name="description">Beskrivning</string>
+    <string name="goBack">Tillbaka</string>
+    <string name="reviews">Recensioner</string>
 </resources>
