--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,6 @@
     <string name="eMail">Email address</string>
     <string name="WebUrl">Homepage</string>
     <string name="description">Description</string>
+    <string name="goBack">Go back</string>
+    <string name="reviews">Reviews</string>
 </resources>
