small layout changes on add view

--- a/app/src/main/res/values-sv-rSE/strings.xml
+++ b/app/src/main/res/values-sv-rSE/strings.xml
@@ -28,4 +28,5 @@
     <string name="description">Beskrivning</string>
     <string name="goBack">Tillbaka</string>
     <string name="reviews">Recensioner</string>
+    <string name="review">Recension</string>
 </resources>
