--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,5 @@
     <string name="description">Description</string>
     <string name="goBack">Go back</string>
     <string name="reviews">Reviews</string>
+    <string name="review">Review</string>
 </resources>
