now possible to signout from app

--- a/app/src/main/res/values-sv-rSE/strings.xml
+++ b/app/src/main/res/values-sv-rSE/strings.xml
@@ -29,4 +29,5 @@
     <string name="goBack">Tillbaka</string>
     <string name="reviews">Recensioner</string>
     <string name="review">Recension</string>
+    <string name="signOut">Logga ut</string>
 </resources>
