--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,5 @@
     <string name="goBack">Go back</string>
     <string name="reviews">Reviews</string>
     <string name="review">Review</string>
+    <string name="signOut">Sign out</string>
 </resources>
